# ai-job-prep-assistant

./: .gitignore  HANDOVER.md  README.md  demo_run.py  main.py  project-structure.txt  pyproject.toml  requirements.txt  result.json  step3_only_result.json  task3_result.json
app/: demo_task2.py
app/Chalicelib/task1_storage/: storage_service.py
backend/: main.py  schemas.py  services.py
comparison_pipeline/: __init__.py  llm_layer.py  models.py  normalizer.py  ontology.py  run_comparison.py  scorer.py  similarity.py
config/: __init__.py  settings.py
extraction_pipeline/: __init__.py  graph.py  llm_client.py  models.py
extraction_pipeline/nodes/: __init__.py  extract_job.py  extract_resume.py
extraction_pipeline/prompts/: __init__.py  extraction_prompts.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: theme-toggle.tsx
frontend/src/lib/: types.ts  (+1 more)
ocr_pipeline/: __init__.py  models.py  pipeline.py
ocr_pipeline/services/: __init__.py  s3_service.py  textract_service.py
ocr_pipeline/utils/: __init__.py  file_validator.py  text_cleaner.py
samples/: jd.txt  resume.txt
tests/: fixtures.py  test_api.py  test_backend_integration.py  test_comparison_pipeline.py  test_extraction_graph.py  test_extraction_models.py  test_extraction_nodes.py  test_extraction_prompts.py  test_file_validator.py  test_llm_client.py  test_llm_layer.py  test_normalizer.py  test_ontology.py  test_pipeline.py  test_s3_service.py  test_scorer.py  test_services.py  test_similarity.py  test_text_cleaner.py  test_textract_service.py
(+6 files in other folders)
