[project]
name = "ai-job-prep-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "moto[s3,textract]>=5.0.0",
    "pdf2image>=1.16.3",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.0",
    "uvicorn>=0.23.0",
]
